[tool.poetry]
name = "freelev0x"
version = "0.1.0"
description = ""
authors = ["Levy Araujo <lev0x79@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.1.11"
django = "^4.1.3"
unicorn = "^2.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
